[package]
name = "queues"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# randoms
rand = "0.8.4"
rand_distr = "0.4.2"
# For capturing interrupt cleanly
signal-hook = "0.3.4"
# For commandline
structopt = "0.3.13"
# for serialization/deserialization
serde = { version = "1.0.130", features = ["derive"] } # Feature required for derive macros.
serde_json = "1.0.72"
# errors
thiserror = "1.0.30"

[dev-dependencies]
assert_approx_eq = "1.1.0"